# sage-mate

./: .env.example  .env.template  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  HANDOFF_VENV_MIGRATION.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  manage.sh  pyproject.toml  quickstart.sh  run_qwen3_32b_service.sh  sage-faculty-twin.code-workspace  sage-mate.code-workspace  stop_qwen3_32b_service.sh
.github/: agent.md
.github/agents/: my-twin.agent.md
.github/workflows/: ci.yml
data/: _seed_faq.json  changelog.json  simulated_student_questions.json
data.pre_recovery_20260604_090912/availability/: current_week.json
data/alerts/: latest_twin_inference_alert.txt  (+1 more)
docs/: agent-rollout-plan.md  analysis.md  benchmark-adapters.md  code-assistant-apply-patch-design.md  code-assistant-integration-audit.md  deployment.md  hosted-web-release.md  kb-audience-review.md  large-scale-analysis-workload.md  local-code-mode.md  mac-vllm-hust.md  ops-console.md  private-materials-kb-review.md  product-outline.md  qwen3-32b-perf-tuning.md  release-one-click.md  runtime-data.md  segment_reuse_twin_exploration.md  simulated-student-questions-live-smoke-report.md  simulated-student-questions-replay-report.md  student-faq.md  student-questions-poor-answers.md  student-questions-replay-report.faiss.md  student-questions-replay-report.md  student-questions-summary.md  systemd-runtime-notes.md  team-weekly-schedule-kb-rollout.md
recovery/: user_accounts_recovery_20260604_090208.tar.gz.sha256
release/: .gitignore  README.md  hosted-web-ascend.sh  hosted-web-installer.sh  hosted-web-nvidia.sh  hosted-web.sh  install.sh  secrets.env.enc  secrets.env.example
tests/: conftest.py  test_admin_auth.py  test_agentic_workflow.py  test_benchmark_adapter.py  test_bm25_backend_config.py  test_calendar_bridge.py  test_capability_plugins.py  test_chat_history_privacy.py  test_chat_pipeline_dag.py  test_chat_post_answer_background.py  test_chat_streaming.py  test_chat_timeout.py  test_code_workbench.py  test_conversation_digest.py  test_deep_thinking_policy.py  test_dynamic_workflow_planner.py  test_frontend_contract.py  test_history_auth.py  test_identity_eval.py  test_knowledge_base.py  test_knowledge_import.py  test_large_scale_analysis_workload.py  test_link_expansion_config.py  test_llm_client.py  test_llm_policy_integration.py  test_lucky_question.py  test_meeting_service.py  test_memory_store.py  test_online_presence.py  test_operations_overview.py  test_persona.py  test_prompt_soft_cap.py  test_runtime_dir_config.py  test_runtime_feature_store.py  test_runtime_repo_sync.py  test_sagevdb_knowledge_store.py  test_segment_reuse_experiment.py  test_skills.py  test_slack_twin_command.py  test_store_resilience.py  (+9 more)
tools/: README.md  _setup_hf_cache.py  benchmark_knowledge_backends.py  benchmark_twin_continuity.py  benchmark_vamos_impact.py  benchmark_vllm_latency.py  bootstrap_conda_env.sh  bootstrap_venv.sh  build_hosted_web_linux_run_installer.sh  build_hosted_web_release_bundle.sh  build_macos_local_code_package.sh  check_twin_inference.py  cleanup_vllm_engine.sh  cloudflared-config.example.yml  configure_slack_twin.sh  create_dual_profile_demo_video.py  ingest_paper_writing_knowledge.py  ingest_private_materials.py  ingest_weekly_schedules.py  ingest_wiki.py  ingest_workspace_repos.py  install_curated_skills.sh  install_local_code_mode.sh  install_user_services.sh  install_vllm_metal_runtime.sh  local_site_proxy.py  migrate_runtime_data.sh  monitor_twin_inference.sh  nginx-local.conf  openai_key_proxy.py  prune_skill_duplicate_kb.py  record_faculty_twin_demo_playwright.py  reload_local_proxy.sh  rename_research_repos.sh  repair_sagevdb.py  repair_sagevdb.sh  replay_poor_cases.py  reserve_vllm_devices.sh  run_app_server.sh  run_full_stack_with_vllm_hust.sh  (+18 more)
(+5416 files in other folders)
